--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3'
 services:
-        web:
-                image: flask_port_v1
-                build: .
-                ports:
-                        - "8086:8086"
-                volumes:
-                        - ./volumes:/volumes
-                        - ./instance:/instance
-                restart: unless-stopped
+      web:
+              image: flask_maniacmusic_v1
+              build: .
+              ports:
+                      - "8024:8080"
+              volumes:
+                      - persistent_volume:/app/volumes
+volumes:
+persistent_volume:
+  driver: local
+  driver_opts:
+    o: bind
+    type: none
+    device: /home/ubuntu/maniacflask/volumes
