--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,11 @@
 version: '3'
 services:
-      web:
-              image: flask_maniacmusic_v1
-              build: .
-              ports:
-                      - "8024:8080"
-              volumes:
-                      - persistent_volume:/app/volumes
-volumes:
-        persistent_volume:
-                driver: local
-                driver_opts:
-                        o: bind
-                        type: none
-                        device: /home/ubuntu/maniacflask/volumes
+        web:
+                image: maniacflask_v1
+                build: .
+                ports:
+                        - "8024:8086"
+                volumes:
+                        - ./volumes:/volumes
+                        - ./instance:/instance
+                restart: unless-stopped
